--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <!--[if lt IE 8]><script src="js/vendor/selectivizr-min.js"></script><![endif]-->
     </head>
     <body>
         <!--[if lt IE 7]>
