--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,8 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/style_scss.css">
-        <link rel="stylesheet" href="css/style_styl.css">
+        <link rel="stylesheet" href="css/scss/style_scss.css">
+        <link rel="stylesheet" href="css/styl/style_styl.css">
         <!--[if lt IE 9]><script src="js/vendor/selectivizr-min.js"></script><![endif]-->
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
