--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="css/common/normalize.css">
         <link rel="stylesheet" href="css/scss/style_scss.css">
         <link rel="stylesheet" href="css/styl/style_styl.css">
         <!--[if lt IE 9]><script src="js/vendor/selectivizr-min.js"></script><![endif]-->
