Update index.html to include jQuery for hamburger() mixin

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 $('.chromeframe').on('click', function() {
                     $(this).slideUp('fast');
                 });
+                $('.hamburger > button').click(function() {
+                    $('.hamburger > nav').slideToggle();
+                });
             });
         </script>
     </body>
