Update hamburger mixin and JavaScript

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     $(this).slideUp('fast');
                 });
                 $('.hamburger > button').click(function() {
-                    $('.hamburger > nav').slideToggle();
+                    $('.hamburger > nav').toggle();
                 });
             });
         </script>
