Add plugins.js with toggleAttr; update hamburger menu to work better.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     $(this).slideUp('fast');
                 });
                 $('.hamburger > button').click(function() {
-                    $('.hamburger > nav').toggle();
+                    $('.hamburger > nav').toggleAttr('style', 'display: block !important;', 'display: none;')
                 });
             });
         </script>
