Fix plugins.js ref

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
         <!--<![endif]-->
         <script src="js/vendor/jquery.placeholder.min.js"></script>
+        <script src="js/plugins.js"></script>
         <script>
             $(function(){
                 $('input, textarea').placeholder();
