Reorganize js. Create jeet-fixed, jeet-speed JS plugin

--- a/index.html
+++ b/index.html
@@ -31,17 +31,8 @@
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
         <!--<![endif]-->
         <script src="js/vendor/jquery.placeholder.min.js"></script>
+        <script src="js/vendor/jeet.js"></script>
         <script src="js/plugins.js"></script>
-        <script>
-            $(function(){
-                $('input, textarea').placeholder();
-                $('.chromeframe').on('click', function() {
-                    $(this).slideUp('fast');
-                });
-                $('.hamburger > button').click(function() {
-                    $('.hamburger > nav').toggleAttr('style', 'display: block !important;', 'display: none;')
-                });
-            });
-        </script>
+        <script src="js/main.js"></script>
     </body>
 </html>
