--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
         <!--<![endif]-->
-        <script src="js/vendor/jeet.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/minified.js"></script>
     </body>
 </html>
