Clean up .browsehappy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     </head>
     <body>
         <!--[if lt IE 9]>
-            <div class="browsehappy"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" target="_blank">activate Google Chrome Frame</a> to improve your experience.</p><span>Clicking anywhere inside this frame will temporarily hide it.</span></div>
+            <div class="browsehappy">
+                <p>
+                    You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" target="_blank">activate Google Chrome Frame</a> to improve your experience.
+                </p>
+                <p>Clicking anywhere inside this frame will temporarily hide it.</p>
+            </div>
         <![endif]-->
         
         
