--- a/tests/visual/stylus/index.html
+++ b/tests/visual/stylus/index.html
@@ -1,55 +1,42 @@
-<html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <section>
-    <div>1<br>newline</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5<br>newline<br>newline2</div>
-    <div>6</div>
-    <div>7</div>
-    <div>8</div>
-    <div>9</div>
-  </section>
-  <section>
-    <div>10</div>
-    <div>11</div>
-    <div>12<br>newline<br>newline2</div>
-    <div>13</div>
-    <div>14<br>newline<br>newline2</div>
-    <div>15</div>
-    <div>16<br>newline</div>
-    <div>17</div>
-    <div>18</div>
-    <div>19</div>
-    <div>20</div>
-  </section>
-  <section>
-    <div>1<br>newline</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5<br>newline<br>newline2</div>
-    <div>6</div>
-    <div>7</div>
-    <div>8</div>
-    <div>9</div>
-  </section>
-  <section>
-    <div>10</div>
-    <div>11</div>
-    <div>12<br>newline<br>newline2</div>
-    <div>13</div>
-    <div>14<br>newline<br>newline2</div>
-    <div>15</div>
-    <div>16<br>newline</div>
-    <div>17</div>
-    <div>18</div>
-    <div>19</div>
-    <div>20</div>
-  </section>
-</body>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Jeet - Stylus Visual Test Suite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <!--[if lt IE 9]><script src="js/vendor/selectivizr-1.0.2.min.js"></script><![endif]-->
+    <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+  </head>
+  <body>
+    <!--[if lt IE 9]>
+      <div class="browsehappy">
+        <p>
+          You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" target="_blank">activate Google Chrome Frame</a> to improve your experience.
+        </p>
+      </div>
+    <![endif]-->
+
+
+    <!-- Centered at 800px -->
+    <section class="center">
+      center(800px)
+    </section>
+
+
+    <!--[if lt IE 9]>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+      <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.0.min.js"><\/script>')</script>
+    <!--<![endif]-->
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
