[tests] Add columns to scss

--- a/tests/scss/index.html
+++ b/tests/scss/index.html
@@ -24,7 +24,35 @@
 
     <!-- Centered at 800px -->
     <section class="center">
-      center(800px)
+      <p>
+        center(1200px)
+      </p>
+    </section>
+
+
+    <!-- Columns -->
+    <section class="column">
+      <div class="twelfths">
+        <div class="one">
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+          <div>col(1/12)</div>
+        </div>
+      </div>
+      <div class="flexible">
+        <div>col(2/7)</div>
+        <div>col(1/2)</div>
+        <div>col(1.5/7)</div>
+      </div>
     </section>
 
 
