[tests] Add headers

--- a/tests/scss/index.html
+++ b/tests/scss/index.html
@@ -23,6 +23,7 @@
 
 
     <!-- Centered at 800px -->
+    <h1>center</h1>
     <section class="center">
       <p>
         center(1200px)
@@ -31,6 +32,7 @@
 
 
     <!-- Columns -->
+    <h1>column</h1>
     <section class="column">
       <div class="twelfths">
         <div class="one">
