[tests] Make center more robust

--- a/tests/scss/index.html
+++ b/tests/scss/index.html
@@ -26,7 +26,7 @@
     <h1>center</h1>
     <section class="center">
       <p>
-        center(1200px)
+        center(1200px, $pad: 60px)
       </p>
     </section>
 
