--- a/awwwards/index.html
+++ b/awwwards/index.html
@@ -63,7 +63,7 @@
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
     <![endif]-->
     <!--[if gt IE 8]><!-->
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.0.min.js"><\/script>')</script>
     <!--<![endif]-->
     <script src="js/plugins.js"></script>
