[feat] add documentation for uncenter() mixin

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 
 <p><em><code>(max_width = 1410px, pad = 0)</code></em></p>
 <p>This is a shortcut to easily center containers. The <code>pad</code> variable sets padding on the left and right.</p>
-<a data-scroll-goto="6" data-example="center-example" class="btn view-example">View an example</a><h3>stack</h3>
+<a data-scroll-goto="6" data-example="center-example" class="btn view-example">View an example</a><h3>uncenter</h3>
+
+<p><em><code>()</code></em></p>
+<p>Cancel that <code>center()</code>. Note: This will revert back the applied styles from <code>center()</code> to default values.</p>
+<h3>stack</h3>
 
 <p><em><code>(pad = 0, align = center)</code></em></p>
 <p>A helper mixin to &quot;stack&quot; elements on top of each other. Useful for mobile views. Accepts padding and/or text alignment.</p>
@@ -86,7 +90,11 @@
 
 <p><em><code>(max_width = 1410px, pad = 0)</code></em></p>
 <p>This is a shortcut to easily center containers. The <code>pad</code> variable sets padding on the left and right.</p>
-<a data-scroll-goto="6" data-example="center-example" class="btn view-example">View an example</a><h3>stack</h3>
+<a data-scroll-goto="6" data-example="center-example" class="btn view-example">View an example</a><h3>uncenter</h3>
+
+<p><em><code>()</code></em></p>
+<p>Cancel that <code>center()</code>. Note: This will revert back the applied styles from <code>center()</code> to default values.</p>
+<h3>stack</h3>
 
 <p><em><code>(pad = 0, align = center)</code></em></p>
 <p>A helper mixin to &quot;stack&quot; elements on top of each other. Useful for mobile views. Accepts padding and/or text alignment.</p>
